[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/pkmnfl.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://alotdamage.mp3" type="AudioStream" id=2]
[ext_resource path="res://choco jatoh.png" type="Texture" id=3]
[ext_resource path="res://fallingdown.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_bottom = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
extra_spacing_bottom = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = -2.0
margin_right = 897.0
margin_bottom = 613.0
rect_scale = Vector2( 0.356204, 0.292907 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 124.0
margin_top = 101.0
margin_right = 203.0
margin_bottom = 189.0
rect_scale = Vector2( 0.409798, 0.401462 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 62.0
margin_top = 157.0
margin_right = 209.0
margin_bottom = 135.0

[node name="playagain" type="Button" parent="HBoxContainer"]
margin_right = 55.0
margin_bottom = 18.0
focus_neighbour_left = NodePath("../quit")
custom_fonts/font = SubResource( 1 )
text = "Play Again"
flat = true

[node name="main menu" type="Button" parent="HBoxContainer"]
margin_left = 59.0
margin_right = 112.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
flat = true

[node name="quit" type="Button" parent="HBoxContainer"]
margin_left = 116.0
margin_right = 147.0
margin_bottom = 18.0
focus_neighbour_right = NodePath("../playagain")
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[connection signal="pressed" from="HBoxContainer/playagain" to="." method="_on_playagain_pressed"]
[connection signal="pressed" from="HBoxContainer/main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
